--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
     /> -->
-    <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <!-- <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
